themes/academicmin/assets/scss/custom.scss
//
// Colors
//

$smashing: #d33a2c; // smashing red
$jax: rgba(218,0,0,.85); // jaxlicious
$rachael: #b30000;
$text2: rgba(0, 0, 0, 0.65); // alt #20232a 
$text: #202124; // alt #20232a 
$textLight: #f5f5f5; // whitesmoke f5f5f5
$primary: $smashing;
$secondary: #bc3428;
$tertiary: #5ebd3e; // lighten($smashing, 45%);
$base: #fff;
$lightGray: #ececec;

//
// Font Family
//

// do not override 'a' anchors: page anchor icons use own styles
body,
h1,h2,h3,h4,h5,h6,p,
div,span,li,
.navbar-light {
  // reactjs.org
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,
  Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif !important;
}

//
// Text color
//

body {
  color: $text;
}
h1,h2,h3,h4,h5,h6 {
  color: $primary;
}

//
// Anchors
//

a:hover,
a:focus,
.anchorjs-link { // anchorjs-link: docs link icons
  color: $text;
}

//
// Emphasize
//

.emphasize {
  padding-top: 0px;
  font-size: 28px;
}

//
// Main Menu
//

// menu background
#navbar-main {
  background: $primary;
}
// menu links
#navbar-main .main-menu-item ul li .nav-link {
  color: white;
}
// Navbar height (requires body margin)
body { 
  margin-top: 60px; 
}
.navbar { 
  height: 60px; 
}
// Logo/brand
.navbar-light .navbar-brand {
  color: $textLight;
  &:hover {
    color: $text;
  }
}
// menu links
.navbar-light .navbar .navbar-nav .nav-link,
.navbar .navbar-nav .nav-link {
  font-size: 20px;
  font-weight: 300 !important;
  &.active {
    font-weight: bold !important;
    color: $text;
  }
  &:hover {
    color: $text;
  }
  &:focus {
    color: $text;
  }
}
// larger screen
@media (min-width: 992px) {
  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 1rem;
    padding-left: 1rem;
  }
}
// Search icon
.navbar .navbar-nav .nav-link {
  color: $base;
}
.navbar-light .navbar-nav .nav-link {
  color: $base;
}

//
// Nav Bar Toggle Menu
//
 
.navbar-light .navbar-toggler {
   color: $textLight;
 }
 #navbar-main .main-menu-item ul li .nav-link {
  color: $textLight;
  &.active {
    color: $textLight !important;
  }
  &:hover {
    color: black;
  }
}
.docs-toggle {
  color: $text;
  background: $base !important;
  &.btn {
    background: $textLight;
  }
}
// Mobile menu
.navbar-collapse.show {
  background-color: $secondary;
}
// Mobile menu dropdown for docs section
.toc-title {
  padding-left: 12px;
}


//
// Button
//

 .btn {
  border: none;
  border-radius: 0;
  background: $primary;
}
.btn-xlarge {
  padding: 1rem 1rem;
  font-size: 20px;
  line-height: 23px;
  &:hover {
    background: $secondary;
  }
}

//
// Lists
//

 ul.list-checkmarks.small li {
  background-image: url(/static/img/check.png);
  background-repeat: no-repeat;
  background-position: left .3125rem;
  background-size: 1.25rem 1.875rem;
  padding: 0 0 .5rem 1.875rem;
  margin-bottom: .5rem;
  line-height: 1.125rem;
}

a, h3.article-title a:hover {
  color: $primary;
  text-decoration: none;
  transition: color 0.6s ease;
}
a {
  color: $primary;
  text-decoration: none;
  background-color: transparent;
}

//
// Docs
//
@mixin nav-hover($bgcolor) {
  text-decoration: none;
  background-color: $bgcolor;
  border-radius: 0 12px 12px 0;
  margin-right: 1rem;
}
// Search: appears in mobile nav toggle table of contents and standard layout
.docs-search {
  border-bottom: none;
  input {
    display: none;
  }
}
// Nav 'item' -first item style separate b/c the only one where .active js class works
.docs-sidebar .docs-toc-item {
  &.active {
    margin-bottom: 0; // only works on the first docs-toc-item so disable for all
  }
  &.active a {
    color: $primary;
    @include nav-hover(#f1f1f1);
    &:hover {
      @include nav-hover(#f1f1f1);
    }
  }
}
// Nav 'link' -Section title link
.docs-sidebar .docs-toc-link {
  &:hover {
    color: $text2;
    @include nav-hover(#f1f1f1);
  }
}
// Nav Links: Hover
.docs-sidebar .nav > .active:hover > a {
  font-weight: 500;
  color: $primary;
  @include nav-hover(#f1f1f1);
}
// Nav Links: Hover
.docs-sidebar .nav > .active > a {
  font-weight: 500;
  color: $primary;
  @include nav-hover(lighten($primary, 45%));
  &:hover {
    @include nav-hover(lighten($primary, 45%));
  }
}
// secondary links
.docs-sidebar .nav > li > a {
  font-weight: 400;
  color: $text;
  &:hover {
    color: $text;
    text-decoration: none;
    background-color: transparent;
    @include nav-hover(#f1f1f1);
  }
}
.docs-sidebar .nav > li.active > a {
  font-weight: 500;
}
.docs-sidebar .nav > li > a:hover {
  color: $primary;
}
// Docs Table of contents
.nav.toc-top {
  border-left: 4px solid $primary;
  a:hover {
    color: $primary;
  }
}
#TableOfContents {
  li a.active {
    color: $primary;
    font-weight: 700;
  }
  li a:hover, .toc-top li a:hover {
    color: $primary;
    text-decoration: none;
  }
  // border
  border-left: 4px solid $primary;
}

//
// Font Awesome
//

.featurette-icon {
  color: $primary;
}

//
// Homepage
//

 .home-section {
  padding: 0;
  margin: 40px 0 45px 0;
  &:nth-of-type(even) {
    background-color: $base;
  }
}

.wg-border-bottom {
  padding-top: 50px;
  border-bottom: 1px solid $lightGray !important;
}

//
// Hero Widget
//

 .wg-hero-center {
  h1,h2,h3,h4,h5,h6,p, .cta-btns {
    text-align: center;
  }
  .hero-title {
    font-weight: 700;
  }
  .subtitle {
    font-size: 30px;
  }
  p {
    margin-bottom: .5rem;
  }
  .cta-btns {
    margin-top: 1.25rem;
  }
}

//
// Featurette Widget
//

 .wg-featurette {
  .align-left {
    text-align: left;
  }
}
.featurette {
  font-size: 17px;
  line-height: 1.7;
  color: $text;
  h3 {
    margin-bottom: 20px;
  }
}

//
// Disable Transition, Transform, Animation
// https://onezeronull.com/2016/10/06/disable-css-transitions-and-animations-temporarily-or-permanently/#permanent-solution
//

/* transform required for search overlay
* {
  -o-transform: none !important;
  -moz-transform: none !important;
  -ms-transform: none !important;
  -webkit-transform: none !important;
  transform: none !important;
}
*/

// Does not prevent search overlay from working
 * {
  -o-transition-property: none !important;
  -moz-transition-property: none !important;
  -ms-transition-property: none !important;
  -webkit-transition-property: none !important;
  transition-property: none !important;
}

// Does not prevent search overlay from working
* {
  -webkit-animation: none !important;
  -moz-animation: none !important;
  -o-animation: none !important;
  -ms-animation: none !important;
  animation: none !important;
}

